first attempt to get station index for geo coords